# vox_ine_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: generate_plots.py  main.py
src/vox_ine_project/defaults/: defaults.py
src/vox_ine_project/features/: features.py
