[project]
name = "vox-ine-project"
version = "0.1.0"
description = "Income Segregation, Immigrant Population and Electoral Choice Dynamics (Spain)"
authors = [
    {name = "Manuel Romero"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "scipy>=1.9",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
